force-app/main/default/objects/Post_Case_Payment_Button_Setting__mdt/fields/Condition_Field__c.field-meta.xml
<CustomField>
    <fullName>Condition_Field__c</fullName>
    <description>The field that holds the value of a special condition that determines button settings. Based relative to the Case Payment object, requires dot notation when necessary. 
Ex 1: custom field &quot;Foo&quot; on the Case_Payment__c object - Enter &quot;Foo__c&quot;. 
Ex 2: custom field &quot;Bar&quot; on the DIR_Case__c object - Enter &quot;Case__r.Bar__c&quot;.</description>
    <inlineHelpText>Enter the field relative to the Case Payment object that holds the special condition that determines button settings. 
Ex: custom field &quot;Foo&quot; on the DIR_Case__c object - enter &quot;Case__r.Foo__c&quot;.</inlineHelpText>
    <label>Condition Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>