force-app/main/default/objects/Post_Case_Payment_Button_Setting__mdt/fields/Condition_Field_Value__c.field-meta.xml
<CustomField>
    <fullName>Condition_Field_Value__c</fullName>
    <inlineHelpText>Enter the condition field&#39;s value that will result in the button settings defined in this record.</inlineHelpText>
    <label>Condition Field Value</label>
    <length>80</length>
    <type>Text</type>
</CustomField>