force-app/main/default/objects/Post_Case_Payment_Button_Setting__mdt/fields/DIR_Case_Recordtype_Name__c.field-meta.xml
<CustomField>
    <fullName>DIR_Case_Recordtype_Name__c</fullName>
    <inlineHelpText>Enter the Developer Name (API Name) of the parent DIR Case&#39;s record type.</inlineHelpText>
    <label>DIR Case Recordtype Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>