force-app/main/default/objects/Post_Case_Payment_Button_Setting__mdt/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <inlineHelpText>Enter a message to display on the visualforce page when this button setting is used.</inlineHelpText>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>