force-app/main/default/objects/Post_Case_Payment_Button_Setting__mdt/fields/Permission_Set__c.field-meta.xml
<CustomField>
    <fullName>Permission_Set__c</fullName>
    <inlineHelpText>Enter the API name of the Permission Set that applies to this setting.</inlineHelpText>
    <label>Permission Set</label>
    <length>50</length>
    <type>Text</type>
</CustomField>