force-app/main/default/objects/Post_Case_Payment_Button_Setting__mdt/fields/Recommend_Button_Rendering__c.field-meta.xml
<CustomField>
    <fullName>Recommend_Button_Rendering__c</fullName>
    <inlineHelpText>View state of the Save Recommend Allocations button on the PostCasePaymentVFP Visualforce page. 
Enter &quot;Hidden&quot;, &quot;Inactive&quot;, or &quot;Active&quot;.</inlineHelpText>
    <label>Recommend Button Rendering</label>
    <length>25</length>
    <type>Text</type>
</CustomField>