force-app/main/default/objects/Post_Case_Payment_Button_Setting__mdt/fields/User_Profile__c.field-meta.xml
<CustomField>
    <fullName>User_Profile__c</fullName>
    <inlineHelpText>Enter the Name (not the API Name) of the User Profile for this setting.</inlineHelpText>
    <label>User Profile</label>
    <length>50</length>
    <type>Text</type>
</CustomField>