force-app/main/default/objects/Post_Case_Payment_Button_Setting__mdt/listViews/All_2.listView-meta.xml
<ListView>
    <fullName>All_2</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>User_Profile__c</columns>
    <columns>Permission_Set__c</columns>
    <columns>DIR_Case_Recordtype_Name__c</columns>
    <columns>Recommend_Button_Rendering__c</columns>
    <columns>Post_Button_Rendering__c</columns>
    <columns>Third_Button_Rendering__c</columns>
    <filterScope>Everything</filterScope>
    <label>All 2</label>
</ListView>